@@ -64,6 +64,7 @@
 #include <Rcpp/sugar/functions/unique.h>
 #include <Rcpp/sugar/functions/match.h>
 #include <Rcpp/sugar/functions/table.h>
+#include <Rcpp/sugar/functions/duplicated.h>
 #include <Rcpp/sugar/functions/self_match.h>
 #include <Rcpp/sugar/functions/setdiff.h>
 
